added contact form and changes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ramiro 🚀 | Portafolio</title>
+    <title>Ramiro | Portafolio 🚀</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./glasses.svg" type="image/x-icon">
+    <script type="module" src="script.js"></script>
 </head>
 <body>
     <header>
@@ -32,7 +33,7 @@
                 </p>
             </div>
             <div class="buttons">
-                <button>Contactáme!</button>
+                <button><a href="#contact-form">Contactáme!</a></button>
                 <button><a href="#projects">Mira mis Proyectos</a> <img src="./assets/icons/up-arrow.svg" alt=""></button>
             </div>
             <div class="about">
@@ -95,10 +96,15 @@
                 <h2 class="project-title">Paradigma Group <strong>E-commerce</strong></h2>
                 <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
                 <div class="project-tags">
-                    <span class="project-tag"><img src="./assets/icons/react-svgrepo-com.svg" alt=""></span>
-                    <span class="project-tag"><img src="./assets/icons/node-js-svgrepo-com.svg" alt=""></span>
-                    <span class="project-tag"><img src="./assets/icons/mongo-svgrepo-com.svg" alt=""></span>
-                    <span class="project-tag"><img src="./assets/icons/aws-svgrepo-com.svg" alt=""></span>
+                    <div class="icons">
+                        <span class="project-tag"><img src="./assets/icons/react-svgrepo-com.svg" alt=""></span>
+                        <span class="project-tag"><img src="./assets/icons/node-js-svgrepo-com.svg" alt=""></span>
+                        <span class="project-tag"><img src="./assets/icons/mongo-svgrepo-com.svg" alt=""></span>
+                        <span class="project-tag"><img src="./assets/icons/aws-svgrepo-com.svg" alt=""></span>
+                    </div>
+                    <div class="links">
+                        <a href="https://paradigmagroup.com.ar" target="_blank"><span class="tooltip-text">Ver el Proyecto</span><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-world"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M3.6 9h16.8" /><path d="M3.6 15h16.8" /><path d="M11.5 3a17 17 0 0 0 0 18" /><path d="M12.5 3a17 17 0 0 1 0 18" /></svg></a>
+                    </div>
                 </div>
             </div>
         </article>
@@ -108,9 +114,16 @@
                 <h2 class="project-title">Javascript <strong>Tierlist Clone</strong></h2>
                 <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
                 <div class="project-tags">
-                    <span class="project-tag"><img src="./assets/icons/html-5-svgrepo-com.svg" alt=""></span>
-                <span class="project-tag"><img src="./assets/icons/css-3-svgrepo-com.svg" alt=""></span>
-                <span class="project-tag"><img src="./assets/icons/js-svgrepo-com.svg" alt=""></span>
+                    <div class="icons">
+                        <span class="project-tag"><img src="./assets/icons/html-5-svgrepo-com.svg" alt=""></span>
+                        <span class="project-tag"><img src="./assets/icons/css-3-svgrepo-com.svg" alt=""></span>
+                        <span class="project-tag"><img src="./assets/icons/js-svgrepo-com.svg" alt=""></span>
+                    </div>
+                    <div class="links">
+                        <a href="https://github.com/KraudKaiser/Tierlist-Cllone-Vanilla-JS" target="_blank"><span class="tooltip-text">Ver el Codigo</span><svg xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-code"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 8l-4 4l4 4" /><path d="M17 8l4 4l-4 4" /><path d="M14 4l-4 16" /></svg></a>
+                        <a href="https://tierlist-vanilla-js.netlify.app/" target="_blank"><span class="tooltip-text">Ver el Proyecto</span><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-world"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M3.6 9h16.8" /><path d="M3.6 15h16.8" /><path d="M11.5 3a17 17 0 0 0 0 18" /><path d="M12.5 3a17 17 0 0 1 0 18" /></svg></a>
+                    </div>
+
             </div>
         </div>
     </article>
@@ -120,9 +133,15 @@
             <h2 class="project-title">Cat - Monkey - <strong>Row</strong></h2>
             <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
             <div class="project-tags">
-                <span class="project-tag"><img src="./assets/icons/html-5-svgrepo-com.svg" alt=""></span>
-                <span class="project-tag"><img src="./assets/icons/css-3-svgrepo-com.svg" alt=""></span>
-                <span class="project-tag"><img src="./assets/icons/js-svgrepo-com.svg" alt=""></span>
+                <div class="icons">
+                    <span class="project-tag"><img src="./assets/icons/html-5-svgrepo-com.svg" alt=""></span>
+                    <span class="project-tag"><img src="./assets/icons/css-3-svgrepo-com.svg" alt=""></span>
+                    <span class="project-tag"><img src="./assets/icons/js-svgrepo-com.svg" alt=""></span>
+                </div>
+                <div class="links">
+                    <a href="https://github.com/KraudKaiser/cat-monkey-row" target="_blank"><span class="tooltip-text">Ver el Codigo</span><svg xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-code"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 8l-4 4l4 4" /><path d="M17 8l4 4l-4 4" /><path d="M14 4l-4 16" /></svg></a>
+                    <a href="https://cat-monkey-row.netlify.app/" target="_blank"><span class="tooltip-text">Ver el Proyecto</span><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-world"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M3.6 9h16.8" /><path d="M3.6 15h16.8" /><path d="M11.5 3a17 17 0 0 0 0 18" /><path d="M12.5 3a17 17 0 0 1 0 18" /></svg></a>
+                </div>
             </div>
         </div>
     </article>
@@ -135,14 +154,19 @@
             <h2 class="project-title">Servidor <strong>DNS</strong></h2>
             <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
             <div class="project-tags">
-                <span class="project-tag"><img src="./assets/icons/csharp-svgrepo-com.svg" alt=""></span>
-                <span class="project-tag"><img src="./assets/icons/dotnet-svgrepo-com.svg" alt=""></span>
+                <div class="icons">
+                    <span class="project-tag"><img src="./assets/icons/csharp-svgrepo-com.svg" alt=""></span>
+                    <span class="project-tag"><img src="./assets/icons/dotnet-svgrepo-com.svg" alt=""></span>
+                </div>
+                <div class="links">
+                    <a href="https://github.com/KraudKaiser/DNS-Server/" target="_blank"><span class="tooltip-text">Ver el Codigo</span><svg xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-code"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 8l-4 4l4 4" /><path d="M17 8l4 4l-4 4" /><path d="M14 4l-4 16" /></svg></a>
+                </div>
             </div>
         </div>
     </article>
     
     </section>
-    <section class="experience">
+    <section id="experience" class="experience">
         <div class="title">
             <h2>Experiencia <strong>Laboral</strong></h2>
         </div>
@@ -152,24 +176,24 @@
                 <h2 class="job-title">Paradigma Group <strong>Fullstack Developer</strong></h2>
                 <h3 class="job-time">Julio 2022 <strong>- Julio 2023</strong></h3>
                 <p class="job-description">En <strong>Paradigma Group</strong>, Fui encargado de Idear y Elaborar un Ecommerce para la marca, <strong>Impulsando</strong> el proyecto tanto en Frontend y Backend, hasta su deployment en AWS</p>
-                <div class="project-tags">
-                    <span class="project-tag"><img src="./assets/icons/react-svgrepo-com.svg" alt=""></span>
-                    <span class="project-tag"><img src="./assets/icons/node-js-svgrepo-com.svg" alt=""></span>
-                    <span class="project-tag"><img src="./assets/icons/mongo-svgrepo-com.svg" alt=""></span>
-                    <span class="project-tag"><img src="./assets/icons/aws-svgrepo-com.svg" alt=""></span>
+                <div class="job-tags">
+                    <span class="job-tag"><img src="./assets/icons/react-svgrepo-com.svg" alt=""></span>
+                    <span class="job-tag"><img src="./assets/icons/node-js-svgrepo-com.svg" alt=""></span>
+                    <span class="job-tag"><img src="./assets/icons/mongo-svgrepo-com.svg" alt=""></span>
+                    <span class="job-tag"><img src="./assets/icons/aws-svgrepo-com.svg" alt=""></span>
                 </div>
             </div>
         </article>
         <article class="job-post">
-            <img src="./assets/images/bomberos-logo.jpg" alt="Project Screenshot" class="job-image">
+            <img src="./assets/images/bomberos-logo.jpg" alt="job Screenshot" class="job-image">
             <div class="job-content">
                 <h2 class="job-title">Bomberos Voluntarios <strong>de Lanus</strong></h2>
                 <h3 class="job-time">Febrero 2022 <strong>- Noviembre 2022</strong></h3>
                 <p class="job-description">Formando parte de un Equipo para unas pasantias de mi Instituto, <strong>Desarrollamos</strong> una Pagina Web para los Bomberos Voluntarios de Lanus, y una base de datos automatizada para sus Socios.</p>
-                <div class="project-tags">
-                    <span class="project-tag"><img src="./assets/icons/react-svgrepo-com.svg" alt=""></span>
-                    <span class="project-tag"><img src="./assets/icons/node-js-svgrepo-com.svg" alt=""></span>
-                    <span class="project-tag"><img src="./assets/icons/microsoftsqlserver-svgrepo-com.svg" alt=""></span>
+                <div class="job-tags">
+                    <span class="job-tag"><img src="./assets/icons/react-svgrepo-com.svg" alt=""></span>
+                    <span class="job-tag"><img src="./assets/icons/node-js-svgrepo-com.svg" alt=""></span>
+                    <span class="job-tag"><img src="./assets/icons/microsoftsqlserver-svgrepo-com.svg" alt=""></span>
                 </div>
             </div>
         </article>
@@ -181,5 +205,27 @@
             <p>He estado enfocado en formar parte de el mundo de la tecnologia desde pequeño, gracias a mi gusto por los videojuegos🎮, me interese en como se desarrollán. Ahora, estudió y creó proyectos para poder mejorar mis habilidades logicas y creativas. Aspiró a ser un desarrollador crucial en la arquitectura y infraestructura, y continuare una Carrera en Ciencias de la Computacion</p>
         </div>
     </section>
+    <section id="contact-form" class="contact-form">
+        <div>
+            <h2><strong>¡</strong>Contáctame<strong>!</strong></h2>
+            <p>Tus ideás estan mas cerca que nunca <strong>de hacerse realidad</strong></p>
+        </div>
+         <form target="_blank" action="https://formsubmit.co/f2ce9df7f0823315b0f5b223d8771412" method="post" id="form" class="form">
+            <label for="name"><h3>Tu <strong>Nombre</strong></h3></label>
+            <input type="text" id="name" name="name" class="input-field" placeholder="John Doe" required>
+            <label for="email"><h3>Tu <strong>Email</strong></h3></label>
+            <input type="email" id="email" name="email" class="input-field" placeholder="johndoe@anything.com" required >
+            <label for="message"><h3>Cuentame <strong>Tu Idea</strong></h3></label>
+            <textarea id="message" name="message" class="input-field textarea-field" required placeholder="Hi, this is John Doe"></textarea>
+            <button type="submit" id="send-button" name="send-button">Enviár</button>
+        </form>
+    </section>
+    <footer>
+        <h1>Ramiro<strong>.</strong></h1>
+        <ul>
+            <li><a href="https://github.com/KraudKaiser" target="_blank"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-linkedin"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" /><path d="M8 11l0 5" /><path d="M8 8l0 .01" /><path d="M12 16l0 -5" /><path d="M16 16v-3a2 2 0 0 0 -4 0" /></svg></a></li>
+            <li><a href="https://www.linkedin.com/in/gimenez-ramiro/" target="_blank"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
