--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             <div class="presentation-info">
                 <div class="row-1">
                     <h2>Hola! Soy</h2>
-                    <h3>Desarrollador</h3>
                 </div>
                 <div class="row-2"><h2>Ramiro <strong>Gimenez</strong></h2></div>
             </div>
@@ -86,14 +85,14 @@
             </aside>
     </main>
     <section id="projects" class="projects">
-        <div>
+        <div class="projects-title">
             <h2>Mis <strong>Proyectos</strong></h2>
         </div>
         
         <article class="project-post">
             <img src="./assets/images/Paradigma.jpg" alt="Project Screenshot" class="project-image">
             <div class="project-content">
-                <h2 class="project-title">Paradigma Group <strong>E-commerce</strong></h2>
+                <h3 class="project-title">Paradigma Group <strong>Ecommerce</strong></h3>
                 <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
                 <div class="project-tags">
                     <div class="icons">
@@ -111,7 +110,7 @@
         <article class="project-post">
             <img src="./assets/images/tielist.jpg" alt="Project Screenshot" class="project-image">
             <div class="project-content">
-                <h2 class="project-title">Javascript <strong>Tierlist Clone</strong></h2>
+                <h3 class="project-title">Javascript <strong>Tierlist Clone</strong></h3>
                 <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
                 <div class="project-tags">
                     <div class="icons">
@@ -130,7 +129,7 @@
     <article class="project-post">
         <img src="./assets/images/catmonkey.jpg" alt="Project Screenshot" class="project-image">
         <div class="project-content">
-            <h2 class="project-title">Cat - Monkey - <strong>Row</strong></h2>
+            <h3 class="project-title">Cat - Monkey - <strong>Row</strong></h3>
             <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
             <div class="project-tags">
                 <div class="icons">
@@ -145,13 +144,13 @@
             </div>
         </div>
     </article>
-    <div>
+    <div class="projects-title">
         <h2>Actualmente <strong>Desarrollando...</strong></h2>
     </div>
     <article class="project-post">
         <img src="./assets/images/dns-server.jpg" alt="Project Screenshot" class="project-image">
         <div class="project-content">
-            <h2 class="project-title">Servidor <strong>DNS</strong></h2>
+            <h3 class="project-title">Servidor <strong>DNS</strong></h3>
             <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
             <div class="project-tags">
                 <div class="icons">
@@ -173,7 +172,7 @@
         <article class="job-post">
             <img src="./assets/images/paradigmagroup.png" alt="Project Screenshot" class="job-image">
             <div class="job-content">
-                <h2 class="job-title">Paradigma Group <strong>Fullstack Developer</strong></h2>
+                <h3 class="job-title">Paradigma Group <strong>Fullstack Developer</strong></h3>
                 <h3 class="job-time">Julio 2022 <strong>- Julio 2023</strong></h3>
                 <p class="job-description">En <strong>Paradigma Group</strong>, Fui encargado de Idear y Elaborar un Ecommerce para la marca, <strong>Impulsando</strong> el proyecto tanto en Frontend y Backend, hasta su deployment en AWS</p>
                 <div class="job-tags">
@@ -187,7 +186,7 @@
         <article class="job-post">
             <img src="./assets/images/bomberos-logo.jpg" alt="job Screenshot" class="job-image">
             <div class="job-content">
-                <h2 class="job-title">Bomberos Voluntarios <strong>de Lanus</strong></h2>
+                <h3 class="job-title">Bomberos Voluntarios <strong>de Lanus</strong></h3>
                 <h3 class="job-time">Febrero 2022 <strong>- Noviembre 2022</strong></h3>
                 <p class="job-description">Formando parte de un Equipo para unas pasantias de mi Instituto, <strong>Desarrollamos</strong> una Pagina Web para los Bomberos Voluntarios de Lanus, y una base de datos automatizada para sus Socios.</p>
                 <div class="job-tags">
@@ -200,9 +199,10 @@
     </section>
     <section class="about-me">
         <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-sunglasses"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 4h-2l-3 10" /><path d="M16 4h2l3 10" /><path d="M10 16h4" /><path d="M21 16.5a3.5 3.5 0 0 1 -7 0v-2.5h7v2.5" /><path d="M10 16.5a3.5 3.5 0 0 1 -7 0v-2.5h7v2.5" /><path d="M4 14l4.5 4.5" /><path d="M15 14l4.5 4.5" /></svg>
-        <div>
+        <div class="about-content">
             <h3>Sobre <strong>Mi</strong></h3>
-            <p>He estado enfocado en formar parte de el mundo de la tecnologia desde pequeño, gracias a mi gusto por los videojuegos🎮, me interese en como se desarrollán. Ahora, estudió y creó proyectos para poder mejorar mis habilidades logicas y creativas. Aspiró a ser un desarrollador crucial en la arquitectura y infraestructura, y continuare una Carrera en Ciencias de la Computacion</p>
+            <p>He estado enfocado en formar parte de el mundo de la tecnologia desde pequeño, gracias a mi gusto por los videojuegos🎮, me interese en como se desarrollán.</p>
+            <p>Ahora, estudió y creó proyectos para poder mejorar mis habilidades logicas y creativas. Aspiró a ser un desarrollador crucial en la arquitectura y infraestructura, y continuare una Carrera en Ciencias de la Computacion</p>
         </div>
     </section>
     <section id="contact-form" class="contact-form">
