--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="description">
                 <p>
-                    Un Ambicioso <strong>Desarrollador de Software</strong> construyendo su camino profesional, siendo su fuerte el <strong>Backend</strong> y utilizando las tecnologias al dia de Frontend.
+                    Un Ambicioso <strong>Desarrollador de Software</strong> construyendo su camino profesional, <strong>Orientadó</strong> a un enfoque <strong>Backend</strong> mis conocimientos en Cloud Services, Microservices, y API's REST a lo largo de <strong>diferentes proyectos</strong> 
                 </p>
             </div>
             <div class="buttons">
@@ -64,21 +64,21 @@
                     </span>
                 </div>
                 <div>
-                    <h3>Para el Desarrollo Frontend</h3>
-                    <span>
-                        <img src="./assets/icons/html-5-svgrepo-com.svg" alt="" srcset="">
-                        <img src="./assets/icons/css-3-svgrepo-com.svg" alt="" srcset="">
-                        <img src="./assets/icons/react-svgrepo-com.svg" alt="" srcset="">
-                        <img src="./assets/icons/vue-svgrepo-com.svg" alt="" srcset="">
-                    </span>
-                </div>
-                <div>
                     <h3>Para el Desarrollo Backend</h3>
                     <span>
                         <img src="./assets/icons/node-js-svgrepo-com.svg" alt="">
                         <img src="./assets/icons/dotnet-svgrepo-com.svg" alt="">
                         <img src="./assets/icons/microsoftsqlserver-svgrepo-com.svg" alt="">
                         <img src="./assets/icons/mongo-svgrepo-com.svg" alt="">
+                    </span>
+                </div>
+                <div>
+                    <h3>Para el Desarrollo Frontend</h3>
+                    <span>
+                        <img src="./assets/icons/html-5-svgrepo-com.svg" alt="" srcset="">
+                        <img src="./assets/icons/css-3-svgrepo-com.svg" alt="" srcset="">
+                        <img src="./assets/icons/react-svgrepo-com.svg" alt="" srcset="">
+                        <img src="./assets/icons/vue-svgrepo-com.svg" alt="" srcset="">
                     </span>
                 </div>
             </div>
@@ -93,7 +93,7 @@
             <img src="./assets/images/Paradigma.jpg" alt="Project Screenshot" class="project-image">
             <div class="project-content">
                 <h3 class="project-title">Paradigma Group <strong>Ecommerce</strong></h3>
-                <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
+                <p class="project-description">Mi proyectó de mayor escalá hasta la fecha desarrollado de forma <strong>Individual.</strong> Un <strong>E-Commerce</strong> con un Backend orientado a NodeJs, Utilizando Endpoints y Middlewares con Express. <br>Utiliza <strong>Autenticacion</strong> con JWT, sumado al uso de la <strong>API de Mercado Pago</strong> y una base de datos NOSQL. Utilizando como Proveedor de Hosting: <strong>Amazon Web Services</strong></p>
                 <div class="project-tags">
                     <div class="icons">
                         <span class="project-tag"><img src="./assets/icons/react-svgrepo-com.svg" alt=""></span>
@@ -111,7 +111,7 @@
             <img src="./assets/images/tielist.jpg" alt="Project Screenshot" class="project-image">
             <div class="project-content">
                 <h3 class="project-title">Javascript <strong>Tierlist Clone</strong></h3>
-                <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
+                <p class="project-description">Un proyecto Individual, usando como principal caracteristica, la <strong>API nativa</strong> de Javascript para <strong>Drag n Drop</strong>. Recreando un clon funcional de la famosa pagina Tierlist para crear Tierlist de cualquier indole. Usando Vanilla <strong>JS y CSS</strong></p>
                 <div class="project-tags">
                     <div class="icons">
                         <span class="project-tag"><img src="./assets/icons/html-5-svgrepo-com.svg" alt=""></span>
@@ -130,7 +130,7 @@
         <img src="./assets/images/catmonkey.jpg" alt="Project Screenshot" class="project-image">
         <div class="project-content">
             <h3 class="project-title">Cat - Monkey - <strong>Row</strong></h3>
-            <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
+            <p class="project-description">Una <strong>App que replicá</strong> el conocido Tic-Tac-Toe, Tres en Raya, o Ta-Te-Ti, etc. Esta App esta creado con la <strong>finalidad</strong> de aprender y utilizar <strong>HTML, CSS y Javascript</strong> sin utilizar Librerias Externas</p>
             <div class="project-tags">
                 <div class="icons">
                     <span class="project-tag"><img src="./assets/icons/html-5-svgrepo-com.svg" alt=""></span>
@@ -151,7 +151,7 @@
         <img src="./assets/images/dns-server.jpg" alt="Project Screenshot" class="project-image">
         <div class="project-content">
             <h3 class="project-title">Servidor <strong>DNS</strong></h3>
-            <p class="project-description">This is a brief description of the project. It explains the main features and technologies used in creating this amazing project.</p>
+            <p class="project-description">Gracias a <strong>Codecrafters</strong>, estoy siguiendo su proyecto para entender el funcionamiento y desarrollar <strong>Un Servidor DNS</strong>, capaz de <strong>Obtener</strong> una peticion para acceder a un Sitio Web, y <strong>Devolver</strong> la IP correspondiente. Utilizando un Lenguaje de tipado Fuerte y bajo nivel como es <strong>Csharp</strong></p>
             <div class="project-tags">
                 <div class="icons">
                     <span class="project-tag"><img src="./assets/icons/csharp-svgrepo-com.svg" alt=""></span>
@@ -201,8 +201,10 @@
         <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.25"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-sunglasses"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 4h-2l-3 10" /><path d="M16 4h2l3 10" /><path d="M10 16h4" /><path d="M21 16.5a3.5 3.5 0 0 1 -7 0v-2.5h7v2.5" /><path d="M10 16.5a3.5 3.5 0 0 1 -7 0v-2.5h7v2.5" /><path d="M4 14l4.5 4.5" /><path d="M15 14l4.5 4.5" /></svg>
         <div class="about-content">
             <h3>Sobre <strong>Mi</strong></h3>
-            <p>He estado enfocado en formar parte de el mundo de la tecnologia desde pequeño, gracias a mi gusto por los videojuegos🎮, me interese en como se desarrollán.</p>
-            <p>Ahora, estudió y creó proyectos para poder mejorar mis habilidades logicas y creativas. Aspiró a ser un desarrollador crucial en la arquitectura y infraestructura, y continuare una Carrera en Ciencias de la Computacion</p>
+            <p>Desde pequeño, la tecnología formo parte de mi vida, acompañandome en hobbies como los videojuegos. Mi fascinacion por la capacidad de envolver mundos tan complejos, en una computadora, hizo intrigarme por el mundo de la <strong>Programacion</strong></p>
+            <p>Empecé por los estudios basicos que me brindó mi escuela, me instruí de manera Autodidactá, y obtuve mi titulo de <strong>Tecnicó en Programacion</strong></p>
+            <p><strong>¡Pero no voy a parar ahi!</strong> Cada dia, voy empleando nuevas tecnologias y preparandome para formar parte del <strong>Mercado IT</strong>. <strong>Aspiró</strong> a puestos que sean capacés de liderar equipos para cumplir un mismo objetivo en comun.</p>
+            <p>Asi que... voy a ir <strong>Paso a Paso ;)</strong></p>
         </div>
     </section>
     <section id="contact-form" class="contact-form">
